fixed non serializable field in serializable class